# pacman

./: Cargo.toml  README.md
assets/sprites/: pacman-sprites.ron
config/: display_config.ron
src/: game.rs  main.rs  state.rs
